--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,21 @@
         android:layout_height="wrap_content"
         android:text="6"
         android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/valordolado"
         app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintBottom_toTopOf="@id/ImageView"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintHorizontal_chainStyle="packed"/>
+
+    <TextView
+        android:id="@+id/valordolado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" (seis) "
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/TextView2"
 
         app:layout_constraintBottom_toTopOf="@id/ImageView"
         app:layout_constraintTop_toBottomOf="@id/textView"/>
@@ -34,7 +47,7 @@
         android:id="@+id/ImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_launcher_background"
+        app:srcCompat="@drawable/empty_dice"
         android:contentDescription="Imagem com a face do dado gerado"
         app:layout_constraintBottom_toTopOf="@id/btn"
         app:layout_constraintTop_toBottomOf="@id/TextView2"
