Programa finalizado e funcional

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:id="@+id/TextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="6"
+        android:text="@string/Numn"
         android:textSize="40sp"
         app:layout_constraintEnd_toStartOf="@id/valordolado"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +35,8 @@
         android:id="@+id/valordolado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" (seis) "
-        android:textSize="40sp"
+        android:text="@string/Nume"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/TextView2"
 
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/empty_dice"
-        android:contentDescription="Imagem com a face do dado gerado"
+        android:contentDescription="@string/imagem"
         app:layout_constraintBottom_toTopOf="@id/btn"
         app:layout_constraintTop_toBottomOf="@id/TextView2"
         app:layout_constraintEnd_toEndOf="parent"
